Adjusting styles to mobile and desktop versions

--- a/Podcast Project/index.html
+++ b/Podcast Project/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">    
     <meta name="viewport"
         content="width=device-width , user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -15,103 +14,31 @@
 </head>
 
 <body>
-    <div id="container">
+    <header>        
         <div id="logohead">
-            <img id="bd" src="./Images/logo.svg" alt="Logo bd"></div>
-    <header id="head">
-        <input type="checkbox" id="burger" />
-        <label for="burger">
-            <div id="button">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </label>
-               <nav class=submenu>
-            <ul>
-
-                <li><a href="#episodios">EPISODIOS</a></li>
-                <li><a href="#nosotros">NOSOTROS</a></li>
-                <li><a href="#entrevistas">ENTREVISTAS</a></li>
-                <li><a href="#topicos">TÓPICOS</a></li>
-
-            </ul>
-        </nav>
+            <img id="img-logo" src="./Images/logo.svg" alt="Logo bd">
+        </div>
+        <div id="menu">
+            <input type="checkbox" id="burger" />
+            <label for="burger">
+                <i class="fas fa-bars fa-lg"></i>
+            </label>
+            <nav class="submenu">
+                <ul>
+                    <li><a href="#episodios">EPISODIOS</a></li>
+                    <li><a href="#nosotros">NOSOTROS</a></li>
+                    <li><a href="#entrevistas">ENTREVISTAS</a></li>
+                    <li><a href="#topicos">TÓPICOS</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    </div>
-
-
-    <div>
-        <h1>Hello <span id="world">world</span><br>pale blue dot.</h1>
-    </div>
-    <p id="parrafo">Un podcast que explora el mundo de <br>la programación. Nuevos episodios, <br>todos los jueves cada
-        15 días.</p>
-    <div class="conoce"><a href="#topicos">CONOCÉ MÁS</a></div>
-    <div id="episodios">
-        <div id="titulo">Episodios</div>
-        <div class="spotify"><iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt"
-                width="94%" height="232px" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="spotify"><iframe src="https://open.spotify.com/embed-podcast/episode/2Hn8oHQ3EgVTtg8ysqfZco"
-                width="94%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="spotify"><iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
-                width="94%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div class="spotify"><iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ"
-                width="94%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        </div>
-        <div id="phone">
-            <img src="./Images/phone.png" width="320px" height="519px" alt="">
-        </div>
+    <div id="container">   
 
     </div>
+    <footer>
 
-
-
-    <h2 id="nosotros">De dónde <br>venimos</h2>
-    <p>
-        Our posturings, our imagined self-<br>
-        importance, the delusion that we<br>
-        have some privileged position in<br>
-        the Universe are challenged by<br>
-        this point of pale light.<br>
-        <br>
-        Our planet is a lonely speck in<br>
-        the great enveloping cosmic dark.<br>
-        In out obscurity, in all this<br>
-        vastness, there is no hint that<br>
-        help will come from elsewhere to<br>
-        save us from ourselves.
-    </p>
-
-
-
-
-    </div>
-    <h3 id="entrevistas">Invitadas/os <br> estelares</h3>
-    <img src="./Images/grace-hopper.png" width="320px" height="243px" alt="">
-    <img src="./Images/Katie-Bouman.png" width="320px" height="243px" alt="">
-    <img src="./Images/Margaret_Hamilton.png" width="320px" height="243px" alt="">
-    <img src="./Images/An E.R.A.Univac 1103 computer in the 1950s.png" width="320px" height="243px" alt="">
-    <img src="./Images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
-        width="320px" height="243px" alt="">
-    <img src="./Images/susan-kare.png" width="320px" height="243px" alt="">
-    <h4 id="topicos">Algunos de <br> nuestros temas</h4>
-    <div><img src="./Images/icon1.svg" alt=""><br> Trabajo remoto</div>
-    <div><img src="./Images/icon2.svg" alt=""><br> Repensando la programación</div>
-    <div><img src="./Images/icon3.svg" alt=""><br> Bases del código</div>
-    <div><img src="./Images/icon4.svg" alt=""><br> Seguridad informática</div>
-    <div id="novedades">
-        <div>¿Querés las últimas novedades?</div>
-        <div class="conoce">ESCUCHÁ LOS ESPISODIOS</div>
-    </div>
-    <div>
-        <footer>© 2019— Hello blue pale dot</footer>
-        <div id="footlogos">
-
-        </div>
-    </div>
+    </footer>
 </body>
 
 </html>
