saving new changes

--- a/Podcast Project/index.html
+++ b/Podcast Project/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">    
+    <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width , user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
@@ -14,14 +15,14 @@
 </head>
 
 <body>
-    <header>        
+    <header>
         <div id="logohead">
             <img id="img-logo" src="./Images/logo.svg" alt="Logo bd">
         </div>
         <div id="menu">
             <input type="checkbox" id="burger" />
             <label for="burger">
-                <i class="fas fa-bars fa-lg"></i>
+                <img src="./Images/burger.svg" width="18px" height="18px" alt="burger-menu-image">
             </label>
             <nav class="submenu">
                 <ul>
@@ -33,7 +34,70 @@
             </nav>
         </div>
     </header>
-    <div id="container">   
+    <div id="container">
+        <h1>Hello <span id="world">world</span> pale blue dot<span id="point">.</span></h1>
+        <h2>Hello <span id="world">world</span> <br>pale blue dot.</h2>
+        <p id="p-desktop">El portal de podcast que explora el mundo de la programación y<br> la tecnología. Nuevos
+            episodios, todos los jueves
+            cada
+            15 días.
+        </p>
+        <p id="p-mobile">Un podcast que explora el mundo de<br> la programación. Nuevos episodios,<br> todos los jueves
+            cada
+            15 días.</p>
+        <div class="conoce"><a href="#topicos">CONOCÉ MÁS</a>
+        </div>
+        <div id="episodios">
+            <svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <polygon fill="white" points="0,100 100,0 100,100" />
+            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <polygon fill="white" points="0,100 100,0 100,100" />
+            </svg>
+            <div id="titulo">Episodios</div>
+            <div class="spotify">
+                <div class="episoderight"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%"
+                        height="232px" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+
+                <div class="episodeleft"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/2Hn8oHQ3EgVTtg8ysqfZco" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="episoderight"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+                <div class="episodeleft"><iframe
+                        src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%"
+                        height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                </div>
+            </div>
+            <div id="phone">
+                <img id="computer" src="./Images/phone.png" width="457.6px" height="660px" alt="">
+
+                <h3 id="nosotros">De dónde <br>venimos</h3>
+                <p>
+                    Our posturings, our imagined self-<br>
+                    importance, the delusion that we<br>
+                    have some privileged position in<br>
+                    the Universe are challenged by<br>
+                    this point of pale light.<br>
+                    <br>
+                    Our planet is a lonely speck in<br>
+                    the great enveloping cosmic dark.<br>
+                    In out obscurity, in all this<br>
+                    vastness, there is no hint that<br>
+                    help will come from elsewhere to<br>
+                    save us from ourselves.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
+
 
     </div>
     <footer>
