--- a/Podcast Project/index2.html
+++ b/Podcast Project/index2.html
@@ -35,9 +35,9 @@
     </header>
 
     <div>
-        <h1>Hello <span id="world">world</span><br>pale blue dot.</h1>
+        <h1>Hello <span id="world">world</span> pale blue dot<span id="point">.</span></h1>
     </div>
-    <p id="parrafo">Un podcast que explora el mundo de <br>la programación. Nuevos episodios, <br>todos los jueves cada
+    <p id="parrafo">Un podcast que explora el mundo de la programación.<br> Nuevos episodios, todos los jueves cada
         15 días.</p>
     <div class="conoce"><a href="#topicos">CONOCÉ MÁS</a></div>
     <div id="episodios">
