--- a/Podcast Project/index.html
+++ b/Podcast Project/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./Styles/styles.css">
     <script src="https://kit.fontawesome.com/8a89a54854.js" crossorigin="anonymous"></script>
     <link
-        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:100,200,300,400,400i,500|IBM+Plex+Sans:600&display=swap"
+        href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i|IBM+Plex+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i&display=swap"
         rel="stylesheet">
 </head>
 
@@ -45,8 +45,8 @@
         <p id="p-mobile">Un podcast que explora el mundo de<br> la programación. Nuevos episodios,<br> todos los jueves
             cada
             15 días.</p>
-        <div class="conoce"><a href="#topicos">CONOCÉ MÁS</a>
-        </div>
+        <a class="conoce" href="#topicos">CONOCÉ MÁS</a>
+
         <div id="episodios">
             <svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
                 <polygon fill="white" points="0,100 100,0 100,100" />
@@ -74,11 +74,25 @@
                         height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 </div>
             </div>
-            <div id="phone">
-                <img id="computer" src="./Images/phone.png" width="457.6px" height="660px" alt="">
+        </div>
+        <div id="where_we_from">
+            <div id="img_woman"><img id="phone" src="./Images/phone.png" alt=""></div>
 
-                <h3 id="nosotros">De dónde <br>venimos</h3>
-                <p>
+            <div id="paragraph_our">
+                <h3 id="we_desktop">De dónde venimos</h3>
+                <h4 id="we_mobile">De dónde<br>venimos</h4>
+                <p id="text_desktop">
+                    Our posturings, our imagined self-importance,<br>
+                    the delusion that we have some privileged<br>
+                    position in the Universe are challenged by this<br>
+                    point of pale light.<br>
+                    <br>
+                    Our planet is a lonely speck in the great<br>
+                    enveloping cosmic dark. In out obscurity, in all<br>
+                    this vastness, there is no hint that help will<br>
+                    come from elsewhere to save us from ourselves.
+                </p>
+                <p id="text_mobile">
                     Our posturings, our imagined self-<br>
                     importance, the delusion that we<br>
                     have some privileged position in<br>
@@ -94,14 +108,44 @@
                 </p>
             </div>
         </div>
+        <div id="interviews">
+            <h3>Invitadas/os estelares</h3>
+        </div>
+        <div id="special_guest">
+            <img src="./Images/grace-hopper.png" width="320px" height="243px" alt="">
+            <img src="./Images/Katie-Bouman.png" width="320px" height="243px" alt="">
+            <img src="./Images/Margaret_Hamilton.png" width="320px" height="243px" alt="">
+            <img src="./Images/An E.R.A.Univac 1103 computer in the 1950s.png" width="320px" height="243px" alt="">
+            <img src="./Images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png"
+                width="320px" height="243px" alt="">
+            <img src="./Images/susan-kare.png" width="320px" height="243px" alt="">
+        </div>
+        <div id="topics">
+            <h5>Algunos de nuestros temas</h5>
+        </div>
+        <div id="images_topics">
+            <div><img src="./Images/icon1.svg" alt=""><br> Trabajo remoto</div>
+            <div><img src="./Images/icon2.svg" alt=""><br> Repensando la<br> programación</div>
+            <div><img src="./Images/icon3.svg" alt=""><br> Bases del código</div>
+            <div><img src="./Images/icon4.svg" alt=""><br> Seguridad<br> informática</div>
+        </div>
+        <div id="news">
+            <svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none">
+                <polygon fill="white" points="0,100 100,0 100,100" />
+            </svg>
+            <div id="want">¿Querés las últimas novedades?</div>
+            <div id="listen">ESCUCHÁ LOS ESPISODIOS</div>
+        </div>
     </div>
-
-
-
-
     </div>
-    <footer>
-
+    <footer> <div> © 2019— Hello blue pale dot
+    </div>
+        <div id="icons"><i class="fab fa-spotify"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-telegram"></i>
+    </div>
     </footer>
 </body>
 
