Adding new chages and andvances on the HTML y CSS files

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -30,14 +30,15 @@
                 <h2>Buscar</h2>
             </div>
             <form>
-                <div>
+                <div id="formSearch" >
                     <input type="search" id="mySearch" name="mySearch"
                         placeholder="   Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
-                    <button id="ButtonSearch">
-                        <div id="ButtonContent"><img id="mGlassImage" src="./Images/lupa_inactive.svg"
-                                alt="magnifying_glass_image"> Buscar</div>
-                    </button>
+                        <button id="ButtonSearch">
+                            <div id="ButtonContent"><img id="mGlassImage" src="./Images/lupa_inactive.svg"
+                                    alt="magnifying_glass_image"> Buscar</div>
+                        </button>
                 </div>
+                
             </form>
         </div>
     </div>
