--- a/giF0S_Project/Theme2/Theme2.html
+++ b/giF0S_Project/Theme2/Theme2.html
@@ -27,7 +27,7 @@
         </div>
         <div id="searchbox">
             <div id="SearchboxTitle">
-                <h2>Buscar</h2>
+                <h2>&nbsp;Buscar</h2>
             </div>
             <form>
                 <div id="formSearch">
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div id="suggestions">
-        <input id="suggest" type="text" name="we_suggest_you" placeholder="Hoy te sugerimos:" size="32">
+        <input id="suggest" type="text" name="we_suggest_you" placeholder="&nbsp;&nbsp;Hoy te sugerimos:" size="32">
     </div>
     <div id="GifSugget">
         <div id="first"><img src="../Images/Test.jpg" alt="Test"></div>
@@ -51,7 +51,7 @@
         <div id="fourth"><img src="../Images/Test.jpg" alt="Test"></div>
     </div>
     <div id="trendsSection">
-        <input type="text" id="trends" name="trends" placeholder="Tendencias:" size="32">
+        <input type="text" id="trends" name="trends" placeholder="&nbsp;&nbsp;Tendencias:" size="32">
         <div class="trendsCharge">
             <img class="trendsFirstCharge" src="../Images/Test.jpg" alt="Test">
             <img src="../Images/Test.jpg" alt="Test">
