--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -59,19 +59,19 @@
 
         <div id="gifSuggest1">
             <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
-            <!-- <button class="seeMoreButton" type="button">Ver más…</button> -->
+            <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest2">
             <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
-            <!-- <button class="seeMoreButton" type="button">Ver más…</button> -->
+            <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest3">
             <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
-            <!-- <button class="seeMoreButton" type="button">Ver más…</button> -->
+            <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest4">
             <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
-            <!-- <button class="seeMoreButton" type="button">Ver más…</button> -->
+            <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
 
     </div>
