--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -57,20 +57,20 @@
     </div>
     <div id="gifSuggest">
 
-        <div id="gifSuggest1">
-            <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
+        <div id="gifSuggest1" class="borderShadowGif">
+            <p class="hashtagGif" id="hashtagGif1"><button class="buttonCloseGif" type="button"></button></p>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
-        <div id="gifSuggest2">
-            <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
+        <div id="gifSuggest2" class="borderShadowGif">
+            <p class="hashtagGif" id="hashtagGif2"><button class="buttonCloseGif" type="button"></button></p>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
-        <div id="gifSuggest3">
-            <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
+        <div id="gifSuggest3" class="borderShadowGif">
+            <p class="hashtagGif" id="hashtagGif3"><button class="buttonCloseGif" type="button"></button></p>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
-        <div id="gifSuggest4">
-            <p><button class="buttonCloseGif" type="button"><img src="./Images/button3.svg" alt="Button-Close"></button></p>
+        <div id="gifSuggest4" class="borderShadowGif">
+            <p class="hashtagGif" id="hashtagGif4"><button class="buttonCloseGif" type="button"></button></p>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
 
