Saving new style changes

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -58,19 +58,19 @@
     <div id="gifSuggest">
 
         <div id="gifSuggest1" class="borderShadowGif">
-            <p class="hashtagGif" id="hashtagGif1"><button class="buttonCloseGif" type="button"></button></p>
+            <p class="hashtagGif" id="hashtagGif1"></p><button class="buttonCloseGif" type="button"></button>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest2" class="borderShadowGif">
-            <p class="hashtagGif" id="hashtagGif2"><button class="buttonCloseGif" type="button"></button></p>
+            <p class="hashtagGif" id="hashtagGif2"></p><button class="buttonCloseGif" type="button"></button>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest3" class="borderShadowGif">
-            <p class="hashtagGif" id="hashtagGif3"><button class="buttonCloseGif" type="button"></button></p>
+            <p class="hashtagGif" id="hashtagGif3"></p><button class="buttonCloseGif" type="button"></button>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
         <div id="gifSuggest4" class="borderShadowGif">
-            <p class="hashtagGif" id="hashtagGif4"><button class="buttonCloseGif" type="button"></button></p>
+            <p class="hashtagGif" id="hashtagGif4"></p><button class="buttonCloseGif" type="button"></button>
             <button class="seeMoreButton" type="button">Ver más…</button>
         </div>
 
